Finalized CRUD for budget plan

--- a/pky/budget/templates/budget/index.html
+++ b/pky/budget/templates/budget/index.html
@@ -9,7 +9,7 @@
     <!-- NAVBAR -->
     <nav>
         <ul>
-            <li><a href="#">Budget plan</a></li>
+            <li><a href="{% url 'plan' %}">Budget plan</a></li>
             <li><a href="#">Actuals</a></li>
             <li><a href="#">Archive</a></li>
         </ul>
