--- a/pky/budget/templates/budget/budget_plan.html
+++ b/pky/budget/templates/budget/budget_plan.html
@@ -1,5 +1,77 @@
 {% extends "budget/index.html" %}
 
 {% block main %}
-<p>Budget plan</p>
+<a href="{% url 'create_budget' %}">Budget toevoegen</a>
+
+<table>
+    <thead>
+        <tr>
+            <th>Inkomen</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for budget in inkomen %}
+            <tr>
+                <td>{{budget.name}}</td>
+                <td>{{budget.budget}}</td>
+                <td><a href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
+                <td><a href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<table>
+    <thead>
+        <tr>
+            <th>Vaste lasten</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for budget in vast %}
+            <tr>
+                <td>{{budget.name}}</td>
+                <td>{{budget.budget}}</td>
+                <td><a href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
+                <td><a href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<table>
+    <thead>
+        <tr>
+            <th>Flexibele lasten</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for budget in flex %}
+            <tr>
+                <td>{{budget.name}}</td>
+                <td>{{budget.budget}}</td>
+                <td><a href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
+                <td><a href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
