--- a/pky/budget/templates/budget/actuals.html
+++ b/pky/budget/templates/budget/actuals.html
@@ -1,5 +1,77 @@
 {% extends "budget/index.html" %}
 
 {% block main %}
-<p>Actuals</p>
+<h1>{{ref_actual.sheet_name}}</h1>
+<a href="{% url 'confirm_to_archive'%}">Nieuwe registratie aanmaken</a>
+<table>
+    <thead>
+        <tr>
+            <th>Inkomen</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th>Werkelijk</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for actual in inkomen %}
+            <tr>
+                <td>{{actual.budget.name}}</td>
+                <td>{{actual.budget.budget}}</td>
+                <td>{{actual.actual}}</td>
+                <td><a href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<table>
+    <thead>
+        <tr>
+            <th>Vaste lasten</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th>Werkelijk</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for actual in vast %}
+            <tr>
+                <td>{{actual.budget.name}}</td>
+                <td>{{actual.budget.budget}}</td>
+                <td>{{actual.actual}}</td>
+                <td><a href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<table>
+    <thead>
+        <tr>
+            <th>Flexibele lasten</th>
+        </tr>
+        <tr>
+            <th>Naam</th>
+            <th>Budget</th>
+            <th>Werkelijk</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for actual in flex %}
+            <tr>
+                <td>{{actual.budget.name}}</td>
+                <td>{{actual.budget.budget}}</td>
+                <td>{{actual.actual}}</td>
+                <td><a href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
