--- a/pky/budget/templates/budget/index.html
+++ b/pky/budget/templates/budget/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="{% url 'plan' %}">Budget plan</a></li>
-            <li><a href="#">Actuals</a></li>
+            <li><a href="{% url 'index' %}">Actuals</a></li>
             <li><a href="#">Archive</a></li>
         </ul>
     </nav>
