--- a/pky/budget/templates/budget/index.html
+++ b/pky/budget/templates/budget/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Budget</title>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
 
     <!-- NAVBAR -->
-    <nav>
-        <ul>
-            <li><a href="{% url 'plan' %}">Budget plan</a></li>
-            <li><a href="{% url 'index' %}">Actuals</a></li>
-            <li><a href="#">Archive</a></li>
-        </ul>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'plan' %}">Budget plan</a></li>
+                    <li><a href="{% url 'index' %}">Actuals</a></li>
+                    <li><a href="#">Archive</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <!-- CONTENT -->
