--- a/pky/budget/templates/budget/generic_form.html
+++ b/pky/budget/templates/budget/generic_form.html
@@ -1,9 +1,13 @@
 {% extends "budget/index.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block main %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_table }}
-    <input type="submit" value="Opslaan">
-</form>
+<div class="mt-5 ms-3">
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-primary" value="Opslaan">
+    </form>
+</div>
 {% endblock %}
