--- a/pky/budget/templates/budget/index.html
+++ b/pky/budget/templates/budget/index.html
@@ -10,22 +10,24 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'plan' %}">Budget plan</a></li>
-                    <li><a href="{% url 'index' %}">Actuals</a></li>
-                    <li><a href="#">Archive</a></li>
-                </ul>
+            <div class="collapse navbar-collapse">
+                <div class="navbar-nav">
+                    <a class="nav-link active" href="{% url 'plan' %}">Budget plan</a>
+                    <a class="nav-link active" href="{% url 'index' %}">Registraties</a>
+                    <a class="nav-link active" href="#">Archief</a></li>
+                </div>
             </div>
         </div>
     </nav>
 
     <!-- CONTENT -->
     <main>
+        <div class="container-fluid">
         {% block main %}
         {% endblock %}
+        </div>
     </main>
 </body>
 </html>
