Added possibility to view archive records

--- a/pky/budget/templates/budget/index.html
+++ b/pky/budget/templates/budget/index.html
@@ -16,7 +16,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="{% url 'plan' %}">Budget plan</a>
                     <a class="nav-link active" href="{% url 'index' %}">Registraties</a>
-                    <a class="nav-link active" href="#">Archief</a></li>
+                    <a class="nav-link active" href="{% url 'archive' %}">Archief</a></li>
                 </div>
             </div>
         </div>
