--- a/pky/budget/templates/budget/archive.html
+++ b/pky/budget/templates/budget/archive.html
@@ -1,14 +1,21 @@
 {% extends "budget/index.html" %}
 
 {% block main %}
-<h1>Archive</h1>
-<ul>
-  {% for record in archive %}
-    <li>{{record.sheet_name}}</li>
-    <li>{{record.sheet_name}}</li>
-  {% empty %}
-    <li>Geen registraties beschikbaar.</li>
-  {% endfor %}
-</ul>
-
+<div class="row mt-5 ms-3">
+  <div class="row">
+    <h2>Archief</h2>
+  </div>
+  <div class="row">
+    <div class="list-group">
+      {% for object in archive_objects %}
+        <a href="{% url 'archive_records' object.pk %}" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{object.sheet_name}}</h5>
+          </div>
+          <small class="text-body-secondary">{{object.creation_date}}</small>
+        </a>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 {% endblock %}
