--- a/pky/budget/templates/budget/actuals.html
+++ b/pky/budget/templates/budget/actuals.html
@@ -32,7 +32,7 @@
                         <td>{{actual.budget.name}}</td>
                         <td>{{actual.budget.budget}}</td>
                         <td>{{actual.actual}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}"><i class="bi bi-pencil"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -57,7 +57,7 @@
                         <td>{{actual.budget.name}}</td>
                         <td>{{actual.budget.budget}}</td>
                         <td>{{actual.actual}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}"><i class="bi bi-pencil"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -82,7 +82,7 @@
                         <td>{{actual.budget.name}}</td>
                         <td>{{actual.budget.budget}}</td>
                         <td>{{actual.actual}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}">Wijzig</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_actual' actual.pk %}"><i class="bi bi-pencil"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
