--- a/pky/budget/templates/budget/budget_plan.html
+++ b/pky/budget/templates/budget/budget_plan.html
@@ -50,8 +50,8 @@
                     <tr>
                         <td>{{budget.name}}</td>
                         <td>{{budget.budget}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
-                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}"><i class="bi bi-pencil"></i></a></td>
+                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}"><i class="bi bi-trash"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -75,8 +75,8 @@
                     <tr>
                         <td>{{budget.name}}</td>
                         <td>{{budget.budget}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
-                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}"><i class="bi bi-pencil"></i></a></td>
+                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}"><i class="bi bi-trash"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -100,8 +100,8 @@
                     <tr>
                         <td>{{budget.name}}</td>
                         <td>{{budget.budget}}</td>
-                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}">Wijzig</a></td>
-                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}">Verwijder</a></td>
+                        <td><a type="button" class="btn btn-outline-secondary btn-sm" href="{% url 'update_budget' budget.pk %}"><i class="bi bi-pencil"></i></a></td>
+                        <td><a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'delete_budget' budget.pk %}"><i class="bi bi-trash"></i></a></td>
                     </tr>
                 {% endfor %}
             </tbody>
